# deep-research-sdk

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
deep_research_sdk/: __init__.py  cli.py  coordinator.py  main.py
deep_research_sdk/deep_agents/: __init__.py  base.py  follow_up_agent.py  query_agent.py  search_agent.py  synthesis_agent.py
deep_research_sdk/deep_agents/prompts/: converter.py  templates.py
