[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-sdk"
version = "0.1.0"
description = "Deep Research CLI library"
authors = [
    {name = "Vincenzo Reina", email = "vincenzoreinaa05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic",
    "litellm",
    "python-dotenv",
    "requests",
    "rich",
    "bs4",
    "ddgs",
    "numpydoc",
]

[project.scripts]
deep-research-sdk = "deep_research_sdk.cli:run"